--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,13 @@
 cmake_minimum_required(VERSION 3.10)
 
 # set the project name
-project(WebMakerJinja VERSION 0.1)
+project(JinjaWebMaker VERSION 0.1)
 
 set(CMAKE_CXX_STANDARD 17)
 
 # add the executable
 add_executable(
-	WebMakerJinja
+	JinjaWebMaker	
 	main.cpp
 	webserver.cpp
 	create_f.cpp
@@ -21,7 +21,9 @@ add_executable(
 set(CMAKE_BUILD_TYPE Debug)
 
 target_link_libraries(
-	WebMakerJinja 
+	JinjaWebMaker	
 	stdc++fs
 	pthread
 )
+
+install(TARGETS JinjaWebMaker DESTINATION bin)
